--- a/views/new_article.erb
+++ b/views/new_article.erb
@@ -8,7 +8,7 @@
   <textarea id="content" name="content" rows="10" cols="30" required></textarea><br><br>
 
   <label for="date">Date of Publication:</label><br>
-  <input type="text" id="date" name="date" value="<%= Time.now.strftime('%Y-%m-%d') %>" readonly><br><br>
+  <input type="text" id="date" name="date_published" value="<%= Time.now.strftime('%B %d, %Y') %>" required><br><br>
 
   <button type="submit">Publish Article</button>
 </form>
