--- a/views/new_article.erb
+++ b/views/new_article.erb
@@ -5,7 +5,7 @@
   <input type="text" id="title" name="title" required><br><br>
 
   <label for="content">Content:</label><br>
-  <textarea id="content" name="content" rows="10" cols="30" required></textarea><br><br>
+  <textarea id="content" name="content" rows="10" cols="30" required style="width: 70%; height: 40px;"></textarea><br><br>
 
   <label for="date">Date of Publication:</label><br>
   <input type="text" id="date" name="date_published" value="<%= Time.now.strftime('%B %d, %Y') %>" required><br><br>
